@@ -2,6 +2,11 @@
 
 Changes with Apache 2.3.12
 
+  *) core: AllowEncodedSlashes new option NoDecode to allow encoded slashes
+     in request URL path info but not decode them. Change behavior of option
+     "On" to decode the encoded slashes as 2.0 and 2.2 do.  PR 35256,
+     PR 46830.  [Dan Poirier]
+
   *) mod_ssl: Check SNI hostname against Host header case-insensitively.
      PR 49491.  [Mayank Agrawal <magrawal.08 gmail.com>]
 
